# auv_2025_teensy

./: .gitignore  README.md  platformio.ini
extra_packages/auv_interfaces/: CMakeLists.txt  package.xml
extra_packages/auv_interfaces/msg/: ArduinoSensor.msg  BoundingBox.msg  Error.msg  Logging.msg  MultiPID.msg  ObjectDifference.msg  Sensor.msg  VelocitySensor.msg
lib/WitMotionIMU/: REG.h  wit_c_sdk.c
src/: KFPart1.cpp  KFPart2.cpp  backup_IMU.cpp  deadband_ma.cpp  main.cpp  main_KF.cpp  main_cpp_yaw_target.cpp  main_deadband_per_thruster.cpp  main_ekf.cpp  main_old.cpp  main_old_kf_majorfix.cpp  main_old_majorfix.cpp  main_pidvel_reynard.cpp  main_rtos.cpp  micro_ros_inner_outer.cpp  micro_ros_yaw_fix.cpp  reynard-1-10-25.cpp
src/file lama/: backup_YAW.cpp  main_PIDVel_Fadhil.cpp  main_cpp_yaw_target.cpp  main_deadband_per_thruster.cpp  main_old.cpp  main_old_kf.cpp  main_old_majorfix.cpp  main_pidvel_reynard.cpp  reynard-26-09-25.cpp  reynard-4-10-25.cpp  tes_IMU.cpp
